--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,13 @@ body {
     background-color: rgb(245, 213, 175);
 }
 
+.logo {
+    display: flex;
+    justify-content: center;
+    margin: 10px 0 0 0;
+    padding: 0
+}
+
 .post-card {    
     border-radius: 16px;
     border: 1px solid gray;
@@ -43,4 +50,19 @@ body {
     font-size: 12.5px;
     text-align: left;
     margin-left: 16px;
+}
+
+.form {
+    display: flex;
+    justify-content: center;
+}
+
+.label-input-wrapper {
+    display: flex;
+    max-width: 200px;
+    flex-wrap: wrap;
+}
+
+.buttons {
+    margin-top: 10px
 }
