--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,23 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 body {
-    background-color: #9FB4C7;     
+    background-color: #9FB4C7;    
+}
+
+* {   
+    color: rgb(40, 40, 116);   
+    font-family: 'Roboto', sans-serif; 
+    font-size: 16px 
+}
+
+section {
+    margin-top: 10px
+}
+
+header {    
+    background-color: #8898a7;
+    width: 100%;
+    height: 80px;
 }
 
 .logo {
@@ -64,7 +82,7 @@ body {
 
 .post-comment {
     font-size: 12.5px;
-    text-align: left;
+    text-align: center;
     margin-left: 16px;
 }
 
@@ -76,8 +94,7 @@ body {
 .post-tag {
     background-color: #d1d9e0; 
     min-width: 50px;
-    padding: 2px 1px;
-    border: 1px solid rgba(95, 94, 94, 0.596);
+    padding: 2px 1px;    
 }
 
 .form-wrapper {
@@ -90,7 +107,7 @@ body {
     width: 300px;
     padding: 16px;
     border-radius: 8px;  
-    max-width: 212px;
+    max-width: 189px;
     box-shadow:
     0 2.8px 2.2px rgba(0, 0, 0, 0.034),
     0 6.7px 5.3px rgba(0, 0, 0, 0.048),
@@ -119,7 +136,8 @@ body {
     border-radius: 10px;
     cursor: pointer;
     outline: none;
-    transition: 0.2s;   
+    transition: 0.2s; 
+    font-size: 12px;   
     background-color: #EEEEFF;    
     box-shadow:
     0 2.8px 2.2px rgba(0, 0, 0, 0.034),
@@ -140,4 +158,36 @@ body {
 
 .search-input {
     padding-bottom: 4px
+}
+
+.Link {     
+    text-decoration: none;
+    font-size: 18px;
+    margin: 0 10px
+}
+
+.Link:hover {
+    opacity: 50%;    
+}
+
+.add-comment-btn {
+    font-size: 13px;
+    border-radius: 4px;
+    padding: 3px 2px;
+    border: 1px solid rgba(95, 94, 94, 0.596);
+    margin-left: 5px;
+}
+
+.login-label {
+    font-size: 12px;    
+    padding-bottom: 4px;
+    margin-left: 4px
+}
+
+.margin-bottom-12 {
+    margin-bottom: 12px
+}
+
+.cursor-pointer {
+    cursor: pointer
 }
