--- a/src/App.css
+++ b/src/App.css
@@ -11,13 +11,13 @@ body {
 }
 
 section {
-    margin-top: 10px
+    margin-top: 30px
 }
 
 header {    
-    background-color: #9FB4C7;
+    background-color: #EEEEFF;
     width: 100%;
-    height: 80px;
+    height: 70px;
     box-shadow:
     0 2.8px 2.2px rgba(0, 0, 0, 0.034),
     0 6.7px 5.3px rgba(0, 0, 0, 0.048),
@@ -170,7 +170,8 @@ header {
 .Link {     
     text-decoration: none;
     font-size: 18px;
-    margin: 0 10px
+    margin: 0 10px;
+    color: rgba(0, 0, 0, 0.774)
 }
 
 .Link:hover {
@@ -182,7 +183,7 @@ header {
     border-radius: 4px;
     padding: 3px 2px;
     border: 1px solid rgba(95, 94, 94, 0.596);
-    margin-left: 5px;
+    margin-left: 5px;    
 }
 
 .login-label {
